@@ -34,38 +34,132 @@
 # accept _____________________________________________________
 # long sys_accept(int fd, struct sockaddr __user *upeer_sockaddr,
 #                 int __user *upeer_addrlen)
-# SYSCALL_DEFINE4(accept4, int, fd, struct sockaddr __user *, upeer_sockaddr,
-#		int __user *, upeer_addrlen, int, flags)
-probe nd_syscall.accept = __nd_syscall.accept4 ?, __nd_syscall.accept ?
+#
+probe nd_syscall.accept = __nd_syscall.accept ?,
+	__nd_syscall.socketcall.accept ?,
+	__nd_syscall.compat_socketcall.accept ?
 {
 	name = "accept"
-	asmlinkage()
-	sockfd = int_arg(1)
-	addr_uaddr = pointer_arg(2)
-	addrlen_uaddr = pointer_arg(3)
+%(systemtap_v <= "2.5" %?
+	# systemtap <= 2.5 combined accept and accept4
+	flags = 0
+	flags_str = "0x0"
 # 'flag_str should have been 'flags_str'.  Deprecate the old name.
 %(systemtap_v <= "1.4" %?
-	flag_str = flags_str
+	flag_str = "0x0"
 %)
 	argstr = sprintf("%d, %p, %p, %s", sockfd, addr_uaddr, addrlen_uaddr,
 			 flags_str)
+%:
+	argstr = sprintf("%d, %p, %p", sockfd, addr_uaddr, addrlen_uaddr)
+%)
 }
-probe __nd_syscall.accept4 = kprobe.function("sys_accept4").call ?
+probe __nd_syscall.accept = kprobe.function("sys_accept").call
 {
 	asmlinkage()
-	flags = int_arg(4)
-	flags_str = _sock_flags_str(flags)
+	@__syscall_gate(%{ __NR_accept %})
+	sockfd = int_arg(1)
+	addr_uaddr = pointer_arg(2)
+	addrlen_uaddr = pointer_arg(3)
 }
-probe __nd_syscall.accept = kprobe.function("sys_accept").call ?
+probe __nd_syscall.socketcall.accept = kprobe.function("sys_socketcall").call ?
 {
-	flags = 0
-	flags_str = "0"
+	asmlinkage()
+	if (int_arg(1) != %{ SYS_ACCEPT %}) next;
+	__args = pointer_arg(2)
+	sockfd = __int32(user_ulong(&@cast(__args, "ulong")[0]))
+	addr_uaddr = user_ulong(&@cast(__args, "ulong")[1])
+	addrlen_uaddr = user_ulong(&@cast(__args, "ulong")[2])
 }
-probe nd_syscall.accept.return = kprobe.function("sys_accept4").return ?,
-				 kprobe.function("sys_accept").return ?
+probe __nd_syscall.compat_socketcall.accept =
+	kprobe.function("compat_sys_socketcall").call ?
+{
+	asmlinkage()
+	if (int_arg(1) != %{ SYS_ACCEPT %}) next;
+	__args = pointer_arg(2)
+	sockfd = user_int(&@cast(__args, "unsigned int")[0])
+	addr_uaddr = user_uint32(&@cast(__args, "unsigned int")[1])
+	addrlen_uaddr = user_uint32(&@cast(__args, "unsigned int")[2])
+}
+probe nd_syscall.accept.return = __nd_syscall.accept.return ?,
+	__nd_syscall.socketcall.accept.return ?
 {
 	name = "accept"
 	retstr = returnstr(1)
+}
+probe __nd_syscall.accept.return = kprobe.function("sys_accept").return ?
+{
+	@__syscall_gate(%{ __NR_accept %})
+}
+probe __nd_syscall.socketcall.accept.return =
+	kprobe.function("sys_socketcall").return ?,
+	kprobe.function("compat_sys_socketcall").return ?
+{
+	if (@entry(__asmlinkage_int_arg(1)) != %{ SYS_ACCEPT %}) next;
+}
+
+# accept4 ____________________________________________________
+#
+# SYSCALL_DEFINE4(accept4, int, fd, struct sockaddr __user *, upeer_sockaddr,
+#		  int __user *, upeer_addrlen, int, flags)
+#
+probe nd_syscall.accept4 = __nd_syscall.accept4 ?,
+	__nd_syscall.socketcall.accept4 ?,
+	__nd_syscall.compat_socketcall.accept4 ?
+{
+	name = "accept4"
+	flags_str = _sock_flags_str(flags)
+	argstr = sprintf("%d, %p, %p, %s", sockfd, addr_uaddr, addrlen_uaddr,
+			 flags_str)
+}
+probe __nd_syscall.accept4 = kprobe.function("sys_accept4").call
+{
+	// Why isn't the compat syscall number '__NR_compat_accept4'?
+	// On all tested platforms, there wasn't a different syscall
+	// number for accept4().
+	asmlinkage()
+	@__syscall_compat_gate(%{ __NR_accept4 %}, %{ __NR_accept4 %})
+	sockfd = int_arg(1)
+	addr_uaddr = pointer_arg(2)
+	addrlen_uaddr = pointer_arg(3)
+	flags = int_arg(4)
+}
+probe __nd_syscall.socketcall.accept4 = kprobe.function("sys_socketcall").call ?
+{
+	asmlinkage()
+	if (int_arg(1) != %{ SYS_ACCEPT4 %}) next;
+	__args = pointer_arg(2)
+	sockfd = __int32(user_ulong(&@cast(__args, "ulong")[0]))
+	addr_uaddr = user_ulong(&@cast(__args, "ulong")[1])
+	addrlen_uaddr = user_ulong(&@cast(__args, "ulong")[2])
+	flags = __int32(user_ulong(&@cast(__args, "ulong")[3]))
+}
+probe __nd_syscall.compat_socketcall.accept4 =
+	kprobe.function("compat_sys_socketcall").call ?
+{
+	asmlinkage()
+	if (int_arg(1) != %{ SYS_ACCEPT4 %}) next;
+	__args = pointer_arg(2)
+	sockfd = user_int(&@cast(__args, "unsigned int")[0])
+	addr_uaddr = user_uint32(&@cast(__args, "unsigned int")[1])
+	addrlen_uaddr = user_uint32(&@cast(__args, "unsigned int")[2])
+	flags = user_int(&@cast(__args, "unsigned int")[3])
+}
+probe nd_syscall.accept4.return = __nd_syscall.accept4.return ?,
+	__nd_syscall.socketcall.accept4.return ?
+{
+	name = "accept4"
+	retstr = returnstr(1)
+}
+probe __nd_syscall.accept4.return = kprobe.function("sys_accept4").return ?
+{
+	@__syscall_compat_gate(%{ __NR_accept4 %}, %{ __NR_accept4 %})
+}
+probe __nd_syscall.socketcall.accept4.return =
+	kprobe.function("sys_socketcall").return ?,
+	kprobe.function("compat_sys_socketcall").return ?
+{
+	if (@entry(__asmlinkage_int_arg(1)) != %{ SYS_ACCEPT4 %}) next;
 }
 
 # access _____________________________________________________
